# llm-reverse-proxy

./: .dockerignore  Dockerfile  LICENSE  README.md  openai-test.sh  package-lock.json
client/: package.json
client-example/: .gitignore  index.html  main.mjs  package-lock.json  package.json
client-example/common/: package.json
client-example/common/src/: index.ts
client-example/node/: package-lock.json  package.json  tsconfig.json
client-example/node/src/: main.ts
client-example/src/: index.ts  lib.ts
client-example/web/: index.html  package-lock.json  package.json
client-example/web/src/: main.ts
client/src/: index.ts
reverse-proxy/: Cargo.toml
reverse-proxy/src/: files.rs  lib.rs  main.rs  proxy.rs  service.rs
reverse-proxy/src/http_util/: mod.rs  proxy.rs  sse.rs
reverse-proxy/src/openai/: api.rs  proxy.rs
server/: Cargo.toml
server/src/: main.rs
