[package]
name = "openai-reverse-proxy"
version = "0.1.0"
edition = "2024"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
http = "1.2.0"
pin-project = "1.1.9"
smallvec = { version = "1.14.0", features = ["const_generics", "serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
anyhow = "1.0.96"
log = "0.4.26"
env_logger = "0.11.6"
dotenvy = "0.15.7"
clap = { version = "4.5.31", features = ["derive"] }
openssl = "0.10.71"
tokio-openssl = "0.6.5"
