[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
http = "1.2.0"
log = "0.4.26"
env_logger = "0.11.6"
anyhow = "1.0.96"
